[package]
name = "node_wcpopup"
version = "0.0.5"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[dependencies]
async-std = "1.12.0"
once_cell = "1.19.0"

[dependencies.neon]
version = "1"

[dependencies.windows]
version = "0.57"
features = [
    "Win32_Foundation",
]

[dependencies.wcpopup]
version = "0.2.3"
#features = ["accelerator"]

#[patch.crates-io]
#wcpopup = { path = "../wcpopup" }
