[package]
name = "wcpopup_node"
version = "0.1.0"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
name = "wcpopup_node"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
async-std = "1.13.0"
once_cell = "1.19.0"

[dependencies.neon]
version = "1"

[target.'cfg(target_os = "linux")'.dependencies.gtk]
version = "0.18.0"

[target.'cfg(target_os = "linux")'.dependencies.gdkx11]
version = "0.18.0"

[dependencies.wcpopup]
version = "0.3.1"
#features = ["accelerator"]

#[patch.crates-io]
#wcpopup = { path = "../wcpopup" }

[profile.release]
opt-level = "s"
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
